--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,5 +15,7 @@ jobs:
         go-version: ${{ matrix.go-version }}
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: go mod tidy
+      uses: go mod tidy
     - name: Run tests
       run: go test -v ./...
