--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,6 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: go mod tidy
-      uses: go mod tidy
+      run: go mod tidy
     - name: Run tests
       run: go test -v ./...
